# Ring

./: .git_ignore  .gitignore  CMakeLists.txt  Readme.md  query_run_wikidata.sh  query_wikidata_full_troublesome.sh
Queries/: Queries-wikidata-benchmark-reduced.txt  Queries-wikidata-benchmark.txt  Queries_1000_results.txt  Queries_troublesome_no_limit.txt  Queries_with_error.txt  Queries_with_issues_full_set.txt
src/: Iterator.hpp  LeapfrogOP.hpp  Triple.cpp  Triple.h  build-index.cpp  build.sh  bwt.hpp  crc_array.hpp  crc_arrays.hpp  query-index-orden-promisorio.cpp  query-index.cpp  ring_sop.hpp  ring_spo.hpp  test_bitmap_constant_time_init.cpp  triple_bwt.hpp  utils.hpp
src/tests/: test_colored_range_counting_wm.cpp  test_colored_range_counting_wm2.cpp  test_colored_range_counting_wm3.cpp  test_colored_range_counting_wm_parameter.cpp  test_initializable_bitmap.cpp  test_ring_sop.cpp  test_ring_spo.cpp  test_wm.cpp
